gcc/testsuite/g++.dg/cpp0x/defaulted28.C
@@ -1,4 +1,5 @@
 // PR c++/49102
+// PR c++/50034
 // { dg-options -std=c++0x }
 
 struct A {
@@ -8,8 +9,9 @@ private:
   A(A const&) = default;	// { dg-error "private" }
 };
 
-void f(...) { }
+int f(...) { }
 int main() {
   A a;
   f(a); 			// { dg-error "this context" }
+  sizeof(f(a));			// OK because unevaluated
 }
